# RealEstateAnalysis

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  proj-struct.txt  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  cc57c6f551be_add_property_goals.py
app/: main.py
app/api/v1/: router.py
app/api/v1/routes/: analyses.py  practice.py  properties.py  property_goal.py
app/core/: config.py
app/db/: base.py
app/models/: __init__.py  property.py  property_goal.py
app/repositories/: property_goal_repository.py  property_repository.py
app/schemas/: __init__.py  analysis.py  practice_analysis.py  practice_goal_schemas.py  property.py  property_goal.py
app/services/: practice_analysis_service.py  practice_goal_service.py  practice_service.py  rent_vs_buy_service.py
tests/: test_health.py  test_practice_analysis.py  test_properties.py  test_rent_vs_buy.py
